# TradingApp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REPLIT_ACTIONS.md  project-context.md  pyproject.toml  replit.nix  update.sh
.claude/: agent-dependencies.json  settings.json
.claude/agents/: _base-agent-protocol.md  _gates.md  agent-factory.md  copywriter.md  creative-strategy.md  data-analyst.md  design.md  elon.md  fullstack.md  geo.md  growth.md  ia.md  infrastructure.md  legal.md  moi.md  orchestrator-reference.md  orchestrator.md  product-manager.md  qa.md  reviewer.md  sales-enablement.md  seo.md  social.md  testeur-backtest-edge.md  testeur-persona-thomas.md  ux.md
.githooks/: pre-commit
.github/workflows/: backtest-v2.yml  bulletin.yml  cycle.yml  ingest.yml  mesure.yml  (+5 more)
docs/: founder-preferences.md  lessons-learned-archive.md  lessons-learned.md  orchestration-plan.md  perf-trends.md  project-context-archive.md
legacy/: .replit  REPLIT_ACTIONS.md
src/: config.py  main.py
tests/: conftest.py  test_ai_client.py  test_backtester_methodology.py  test_backtester_verdict.py  test_calendar_fr.py  test_config.py  test_e2e_phase2.py  test_journal_schema.py  test_main_signal.py  test_scoring_dimensions.py  test_scoring_engine.py  test_scoring_sanity_checks.py  test_telegram_bot_commands.py  test_telegram_templates.py
v3/: ACTIVATION.md  ANALYSE-PROMPT-ia.md  ANALYSE-PROMPT-v2-ia.md  KILL-CRITERION.md  README.md  RUN-CYCLE.txt  RUN-SYMBOLS.txt  RUN-TEST.txt  RUN-WEEKLY.txt  SELECTION-RULE.md  requirements-dev.txt  requirements.txt  selection-rule-v2.md
vps-news-collector/: DEPLOY.md  DEPLOY1.SH  agent_news.py  extractor.py  news_collector.py  requirements.txt
(+943 files in other folders)
